--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>devops.b1.lab4</name>
+	<name>Jenkins-Maven</name>
 	<comment></comment>
 	<projects>
 	</projects>
